--- a/ProjectDiamondShop/Views/Order/UpdateOrderDetails.cshtml
+++ b/ProjectDiamondShop/Views/Order/UpdateOrderDetails.cshtml
@@ -1,6 +1,8 @@
-﻿@model ProjectDiamondShop.Models.ViewOrderViewModel
-@{
-    var roleId = (int)Session["RoleID"];
+﻿@{
+    var order = ViewBag.Order as DiamondShopBOs.tblOrder;
+    var orderItems = ViewBag.Items as List<DiamondShopBOs.tblOrderItem>;
+    var statusUpdates = ViewBag.StatusUpdates as List<DiamondShopBOs.tblOrderStatusUpdate>;
+    int roleId = (int)Session["RoleID"];
 }
 
 <!DOCTYPE html>
@@ -166,54 +168,54 @@
             <h2>Update Order Status</h2>
             <div class="status-progress">
                 <div>
-                    <div class="circle @(Model.Order.Status == "Order Placed" || Model.Order.Status == "Preparing Goods" || Model.Order.Status == "Shipped to Carrier" || Model.Order.Status == "In Delivery" || Model.Order.Status == "Delivered" || Model.Order.Status == "Paid" ? "completed" : "")"></div>
+                    <div class="circle @(order.status == "Order Placed" || order.status == "Preparing Goods" || order.status == "Shipped to Carrier" || order.status == "In Delivery" || order.status == "Delivered" || order.status == "Paid" ? "completed" : "")"></div>
                     <span>Order Placed</span>
                 </div>
-                <div class="line @(Model.Order.Status == "Preparing Goods" || Model.Order.Status == "Shipped to Carrier" || Model.Order.Status == "In Delivery" || Model.Order.Status == "Delivered" || Model.Order.Status == "Paid" ? "completed-line" : "")"></div>
+                <div class="line @(order.status == "Preparing Goods" || order.status == "Shipped to Carrier" || order.status == "In Delivery" || order.status == "Delivered" || order.status == "Paid" ? "completed-line" : "")"></div>
                 <div>
-                    <div class="circle @(Model.Order.Status == "Preparing Goods" || Model.Order.Status == "Shipped to Carrier" || Model.Order.Status == "In Delivery" || Model.Order.Status == "Delivered" || Model.Order.Status == "Paid" ? "completed" : "")"></div>
+                    <div class="circle @(order.status == "Preparing Goods" || order.status == "Shipped to Carrier" || order.status == "In Delivery" || order.status == "Delivered" || order.status == "Paid" ? "completed" : "")"></div>
                     <span>Preparing Goods</span>
                 </div>
-                <div class="line @(Model.Order.Status == "Shipped to Carrier" || Model.Order.Status == "In Delivery" || Model.Order.Status == "Delivered" || Model.Order.Status == "Paid" ? "completed-line" : "")"></div>
+                <div class="line @(order.status == "Shipped to Carrier" || order.status == "In Delivery" || order.status == "Delivered" || order.status == "Paid" ? "completed-line" : "")"></div>
                 <div>
-                    <div class="circle @(Model.Order.Status == "Shipped to Carrier" || Model.Order.Status == "In Delivery" || Model.Order.Status == "Delivered" || Model.Order.Status == "Paid" ? "completed" : "")"></div>
+                    <div class="circle @(order.status == "Shipped to Carrier" || order.status == "In Delivery" || order.status == "Delivered" || order.status == "Paid" ? "completed" : "")"></div>
                     <span>Shipped to Carrier</span>
                 </div>
-                <div class="line @(Model.Order.Status == "In Delivery" || Model.Order.Status == "Delivered" || Model.Order.Status == "Paid" ? "completed-line" : "")"></div>
+                <div class="line @(order.status == "In Delivery" || order.status == "Delivered" || order.status == "Paid" ? "completed-line" : "")"></div>
                 <div>
-                    <div class="circle @(Model.Order.Status == "In Delivery" || Model.Order.Status == "Delivered" || Model.Order.Status == "Paid" ? "completed" : "")"></div>
+                    <div class="circle @(order.status == "In Delivery" || order.status == "Delivered" || order.status == "Paid" ? "completed" : "")"></div>
                     <span>In Delivery</span>
                 </div>
-                <div class="line @(Model.Order.Status == "Delivered" || Model.Order.Status == "Paid" ? "completed-line" : "")"></div>
+                <div class="line @(order.status == "Delivered" || order.status == "Paid" ? "completed-line" : "")"></div>
                 <div>
-                    <div class="circle @(Model.Order.Status == "Delivered" || Model.Order.Status == "Paid" ? "completed" : "")"></div>
+                    <div class="circle @(order.status == "Delivered" || order.status == "Paid" ? "completed" : "")"></div>
                     <span>Delivered</span>
                 </div>
-                <div class="line @(Model.Order.Status == "Paid" ? "completed-line" : "")"></div>
+                <div class="line @(order.status == "Paid" ? "completed-line" : "")"></div>
                 <div>
-                    <div class="circle @(Model.Order.Status == "Paid" ? "completed" : "")"></div>
+                    <div class="circle @(order.status == "Paid" ? "completed" : "")"></div>
                     <span>Paid</span>
                 </div>
             </div>
-            @if (roleId != 1)
+            @if (roleId == 4 || roleId == 5)
             {
                 <form action="@Url.Action("UpdateStatus", "Order")" method="post">
                     @Html.AntiForgeryToken()
-                    <input type="hidden" name="orderId" value="@Model.Order.OrderID" />
+                    <input type="hidden" name="orderId" value="@order.orderID" />
                     <div class="form-group">
                         <label for="status">Update Status</label>
                         <select class="form-control" id="status" name="status">
-                            @if (roleId == 4)
-                            {
-                                <option value="In Delivery">In Delivery</option>
-                                <option value="Delivered">Delivered</option>
-                            }
-                            else if (roleId == 5)
+                            @if (roleId == 5)
                             {
                                 <option value="Order Placed">Order Placed</option>
                                 <option value="Preparing Goods">Preparing Goods</option>
                                 <option value="Shipped to Carrier">Shipped to Carrier</option>
                                 <option value="Paid">Paid</option>
+                            }
+                            else if (roleId == 4)
+                            {
+                                <option value="In Delivery">In Delivery</option>
+                                <option value="Delivered">Delivered</option>
                             }
                         </select>
                     </div>
@@ -221,22 +223,22 @@
                 </form>
             }
             <div class="back-button">
-                @if (roleId == 4)
+                @if (roleId == 1)
+                {
+                    <form action="@Url.Action("ViewOrders", "Home")" method="get">
+                        <button type="submit" class="btn btn-success">Back to Customer</button>
+                    </form>
+                }
+                else if (roleId == 4)
                 {
                     <form action="@Url.Action("Index", "DeliveryStaff")" method="get">
-                        <button type="submit" class="btn btn-success">Back to DeliveryStaff</button>
+                        <button type="submit" class="btn btn-success">Back to Delivery Staff</button>
                     </form>
                 }
                 else if (roleId == 5)
                 {
                     <form action="@Url.Action("Index", "SaleStaff")" method="get">
-                        <button type="submit" class="btn btn-success">Back to SaleStaff</button>
-                    </form>
-                }
-                else if (roleId == 1)
-                {
-                    <form action="@Url.Action("ViewOrders", "Home")" method="get">
-                        <button type="submit" class="btn btn-success">Back to Customer</button>
+                        <button type="submit" class="btn btn-success">Back to Sale Staff</button>
                     </form>
                 }
             </div>
@@ -245,15 +247,15 @@
         <div class="flex-container">
             <div class="box" style="width: 45%;">
                 <h2>Order Items</h2>
-                @foreach (var item in Model.Items)
+                @foreach (var item in orderItems)
                 {
                     <div class="form-group">
-                        <label>Diamond ID:</label>
-                        <p>@item.DiamondID</p>
+                        <label>Item ID:</label>
+                        <p>@item.ItemID</p>
                     </div>
                     <div class="form-group">
-                        <label>Sale Price:</label>
-                        <p>@item.DiamondPrice</p>
+                        <label>Sale Price Item:</label>
+                        <p>@item.salePriceItem</p>
                     </div>
                 }
             </div>
@@ -262,51 +264,51 @@
                 <h2>Order Details</h2>
                 <div class="form-group">
                     <label for="orderID">Order ID</label>
-                    <p id="orderID">@Model.Order.OrderID</p>
+                    <p id="orderID">@order.orderID</p>
                 </div>
                 <div class="form-group">
                     <label for="customerID">Customer ID</label>
-                    <p id="customerID">@Model.Order.CustomerID</p>
+                    <p id="customerID">@order.customerID</p>
                 </div>
                 <div class="form-group">
                     <label for="deliveryStaffID">Delivery Staff ID</label>
-                    <p id="deliveryStaffID">@Model.Order.DeliveryStaffID</p>
+                    <p id="deliveryStaffID">@order.deliveryStaffID</p>
+                </div>
+                <div class="form-group">
+                    <label for="saleStaffID">Sale Staff ID</label>
+                    <p id="saleStaffID">@order.saleStaffID</p>
                 </div>
                 <div class="form-group">
                     <label for="totalMoney">Total Money</label>
-                    <p id="totalMoney">@Model.Order.TotalMoney</p>
+                    <p id="totalMoney">@order.totalMoney</p>
                 </div>
                 <div class="form-group">
                     <label for="status">Status</label>
-                    <p id="status">@Model.Order.Status</p>
+                    <p id="status">@order.status</p>
                 </div>
                 <div class="form-group">
                     <label for="address">Address</label>
-                    <p id="address">@Model.Order.Address</p>
+                    <p id="address">@order.address</p>
                 </div>
                 <div class="form-group">
                     <label for="phone">Phone</label>
-                    <p id="phone">@Model.Order.Phone</p>
+                    <p id="phone">@order.phone</p>
                 </div>
                 <div class="form-group">
                     <label for="saleDate">Sale Date</label>
-                    <p id="saleDate">@Model.Order.SaleDate</p>
-                </div>
-                <div class="form-group">
-                    <label for="voucherID">Voucher ID</label>
-                    <p id="voucherID">@Model.VoucherID</p>
+                    <p id="saleDate">@order.saleDate</p>
                 </div>
             </div>
 
             <div class="box" style="width: 45%;">
                 <h2>Date Update Status</h2>
                 <ul class="timeline">
-                    @if (ViewBag.StatusUpdates != null)
+                    @if (statusUpdates != null)
                     {
-                        foreach (var update in ViewBag.StatusUpdates)
+                        foreach (var update in statusUpdates)
                         {
                             <li>
-                                <p><strong>@update.Key:</strong> @update.Value.ToString("yyyy-MM-dd HH:mm:ss")</p>
+                                <p><strong>@update.status:</strong> @update.updateTime.ToString("yyyy-MM-dd HH:mm:ss")</p>
                             </li>
                         }
                     }
